--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,15 @@ services:
     # image: 'php:7.2-fpm'
     build: 'php'
     volumes:
-      - './src:/var/www/code'
+      - '.:/var/www/symfony:cached'
+      - ./var/logs/symfony:/var/www/symfony/var/logs:cached
       - './conf/php.ini:/usr/local/etc/php/php.ini'
   nginx:
     image: 'nginx'
     ports:
       - '8000:80'
     volumes:
-      - './src:/var/www/code'
+      - '.:/var/www/symfony:cached'
       - './conf/default.conf:/etc/nginx/conf.d/default.conf'
   database:
     image: mariadb
